--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/fp-light-brand.webp" />
-    <link rel="apple-touch-icon" href="/fp-light-brand.webp" />
-    <meta property="og:image" content="/fp-light-brand.webp" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <meta property="og:image" content="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>fundingpips</title>
   </head>
