--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" href="/logo.png" />
     <meta property="og:image" content="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fundingpips</title>
+    <title>OXO FUNDED</title>
   </head>
   <body>
     <div id="root"></div>
